Fix alignment of carousel text and button on mobile devices. Unsure about color scheme at present

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ body {
     font-size: 4rem;
 }
 
+.navbar-brand:hover {
+    color: var(--lightcyan);
+}
+
 .navbar-toggler {
     color: var(--mintcream);
     font-size: 8rem;
@@ -87,22 +91,34 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5;
+    filter: brightness(50%);
+    opacity: 0.7;
 }
 
 .carousel-caption {
-    font-size: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    top: 5%;
+    left: 3rem;
+}
+
+.carousel-text {
+    font-size: 2.5rem;
+    color: var(--mintcream);
 }
 
 .button {
+    margin-top: 1rem;
     font-size: 1.6rem;
     color: var(--mintcream);
     background-color: var(--cambridgeblue);
-    padding: 0.5rem 2rem;
+    padding: 0.2em 3rem;
     border: none;
     border-radius: 5px;
 }
 
 .button:hover {
-    background: var(--lightcyan);
+    background: var(--azure);
+    color: var(--cambridgeblue);
 }
